Bug fix in AdminShiftStatUtil.js

--- a/src/components/testing/xx/XXTable.css
+++ b/src/components/testing/xx/XXTable.css
@@ -12,4 +12,5 @@
 table#rosterTable
 {
 	font-size: 15px;
+	box-sizing: border-box;
 }
